checker area controller and tests and some general fixes
- add ds_store to git ignore
- checker area tests
- fix for no type showing up on the checker area squares type
